--- a/random-pi/index.html
+++ b/random-pi/index.html
@@ -2,32 +2,72 @@
 <html>
 <head>
 	<title>Randomness</title>
+	<meta charset="utf-8">
 	<script type="text/javascript"></script>
-	<script language="javascript" type="text/javascript" src="jquery.js" ></script>
-	<script language="javascript" type="text/javascript" src="core.js" ></script>	
+	<!--<script language="javascript" type="text/javascript" src="jquery.js" ></script>-->
+	
+	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+  <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+  <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+  <script language="javascript" type="text/javascript" src="core.js" ></script>
+	<link href="jquery.highlighttextarea.css" rel="stylesheet">
+  <script src="jquery.highlighttextarea.js"></script>
+	
 	<style>
+	fieldset {
+		border: none;
+	}
 	textarea {
-    background-color: #000;
-    border: 1px solid #000;
-    color: #00ff00;
-    padding: 8px;
-    font-family: courier new;
-}
+		background-color: #000;
+		border: 1px solid #000;
+		color: #000000;
+		padding: 8px;
+		font-family: courier new;
+	}
+	.highlightTextarea {
+		margin: 0 auto;
+	}
+	body {
+		background-image:url(http://s5.postimg.org/knnsa632b/noisy_texture_100x100_o60_d52_c_43cff2_t0.png);
+		background-repeat:repeat;
+	}
+	.stats {
+		background-color: white;
+	}
+	.header {
+		background: white;
+	}
+	.gameOver {
+		background: red;
+	}
 </style>
 </head>
 
 <body>
 	<form action="<?=$_SERVER['PHP_SELF']?>">
-		<fieldset align="center">
-			<legend>Please Enter Your Random Values Here:</legend>
-			<textarea value ="pi" id="pi" name="pi" rows="10" cols="58">3.14</textarea>
-			<!--<textarea value ="pi" id="pi" name="pi" rows="10" cols="58" onkeypress='return event.charCode >= 48 && event.charCode <= 57'>3.14</textarea>-->
+		<fieldset align="center" >
+			<div class="header">
+			<h2>Guess the digits of Pi</h2>
+			<a> Each correct guess will gain you 5 guesses! </a>
+			</div>
+			<br/>
+			<textarea value ="pi" id="pi" name="pi" rows="10" cols="58" >3.14</textarea>
+			<br/>
+			<div id="gameOver" class="gameOver" hidden>Oops! You've run out of guesses. Game Over!</div>
+			<div class="stats" >
+			<h3>Guess Stats</h3>
+			Guesses left: <a id="guessBank" a>5</a>
 			<br/><br/>
-			Average Error in your guess: <input type="text" name="schowScore" id="showScore" value="100%" disabled></input>
+			Total guesses: <a id="guessCount" a>0</a>
 			<br/><br/>
-			Number of correct guesses/Total guesses: <input type="text" name="hitRate" id="hitRate" value="0" disabled>
+			Number of correct guesses: <a id="hitRate">0</a>
 			<br/><br/>
-			<input type="submit" value="Visualise my guess with Huge Data!">
+			Average deviation in your guess: <a id="showDeviation" >0%</a>
+			<br/><br/>
+			</div>
+			
+			<!--<input type="submit" value="Visualise my guess with Huge Data!">
+			<input type="button" value="Show correct ones" id="showcolors">-->
 		</fieldset>
 		<a id="pi"></a>
 	</form>
