--- a/random-pi/index.html
+++ b/random-pi/index.html
@@ -33,27 +33,36 @@
 	}
 	.stats {
 		background-color: white;
+	  margin: 0 auto;
+	  width: 50%;
 	}
 	.header {
 		background: white;
+			  margin: 0 auto;
+	  width: 50%;
 	}
 	.gameOver {
-		background: red;
+		background: #00ff00;
+		margin: 0 auto;
+	  width: 50%;
+	}
+	h2, h3 {
+		background: aqua;
 	}
 </style>
 </head>
 
 <body>
-	<form action="<?=$_SERVER['PHP_SELF']?>">
 		<fieldset align="center" >
 			<div class="header">
 			<h2>Guess the digits of Pi</h2>
-			<a> Each correct guess will gain you 5 guesses! </a>
+			<a> Each correct guess will gain you 5 guesses! Get to as many digits as you can. </a>
+			<br/><br/>
 			</div>
 			<br/>
 			<textarea value ="pi" id="pi" name="pi" rows="10" cols="58" >3.14</textarea>
 			<br/>
-			<div id="gameOver" class="gameOver" hidden>Oops! You've run out of guesses. Game Over!</div>
+			<div id="gameOver" class="gameOver" hidden>Oops! You've run out of guesses. Game Over! <a href="."> Try Again</a></div>
 			<div class="stats" >
 			<h3>Guess Stats</h3>
 			Guesses left: <a id="guessBank" a>5</a>
@@ -69,8 +78,6 @@
 			<!--<input type="submit" value="Visualise my guess with Huge Data!">
 			<input type="button" value="Show correct ones" id="showcolors">-->
 		</fieldset>
-		<a id="pi"></a>
-	</form>
 </body>
 
 </html>
