--- a/t-rex-mario/index.html
+++ b/t-rex-mario/index.html
@@ -3,7 +3,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0,
         maximum-scale=1.0, user-scalable=no">
-        <title>t.rex mario</title>
+        <title>T-Rex Mario</title>
         <link rel="stylesheet" type="text/css" href="styles/styles.css">
     </head>
     <body >
@@ -15,15 +15,15 @@
         </div>
         <div id="offline-resources" jstcache="0">
             <div id="offline-resources-1x" jstcache="0">
+                <img id="1x-horizon" src="img/1x-horizonM.png" jstcache="0">
+                <img id="1x-trex" src="img/1x-trex.png" jstcache="0">
                 <img id="1x-obstacle-large" src="img/1x-obstacle-largeM.png" jstcache="0">
                 <img id="1x-obstacle-small" src="img/1x-obstacle-smallM.png" jstcache="0">
                 <img id="1x-cloud" src="img/1x-cloudM.png" jstcache="0">
                 <img id="1x-text" src="img/1x-text.png" jstcache="0">
-                <img id="1x-horizon" src="img/1x-horizonM.png" jstcache="0">
-                <img id="1x-trex" src="img/1x-trex.png" jstcache="0">
                 <img id="1x-restart" src="img/1x-restart.png" jstcache="0">
             </div>
-            <div id="offline-resources-2x" jstcache="0">
+            <!-- <div id="offline-resources-2x" jstcache="0">
                 <img id="2x-obstacle-large" src="img/2x-obstacle-large.png" jstcache="0">
                 <img id="2x-obstacle-small" src="img/2x-obstacle-small.png" jstcache="0">
                 <img id="2x-cloud" src="img/2x-cloud.png" jstcache="0">
@@ -31,7 +31,7 @@
                 <img id="2x-horizon" src="img/2x-horizon.png" jstcache="0">
                 <img id="2x-trex" src="img/2x-trex.png" jstcache="0">
                 <img id="2x-restart" src="img/2x-restart.png" jstcache="0">
-            </div>
+            </div> -->
         </div>
         <!-- <template id="audio-resources" jstcache="0">
         <audio id="offline-sound-press" src="assets/offline-sound-press.mp3"></audio>
@@ -47,13 +47,13 @@
         <div id="main-message" jstcache="0">
             <h1 i18n-content="heading" jstcache="0"></h1>
             <br/>
-            <p jstcache="0">T-rex from Chrome's offline error web page enters <em>mushroom kingdom</em> of Mario Bros
+            <p jstcache="0">T-Rex in Chrome's offline web page enters <em>Mushroom Kingdom</em> of Super Mario Bros.
                 <br/><br/><br/><a id='tip'>Tip: Do not eat mushrooms!</a>
                 <br/><br/><br/>
                 <a id='disclaimer'>No copyright infringement intended. Made for self-learning<a>
             </p>
         <div class="error-code" jscontent="errorCode" jstcache="9" href="www.google.com">
-            <br/><a id='original' href="http://yathish1618.github.io">Play Original</a>
+            <br/><a id='original' href="../t-rex-runner/">Play Original</a>
             <br/><br/><br/><a id='more' href="http://yathish1618.github.io">What else?</a>
         </div>
          </div>
