Home page added
Home page added and minor css edits for mario

--- a/t-rex-mario/index.html
+++ b/t-rex-mario/index.html
@@ -53,7 +53,8 @@
                 <a id='disclaimer'>No copyright infringement intended. Made for self-learning<a>
             </p>
         <div class="error-code" jscontent="errorCode" jstcache="9" href="www.google.com">
-            <br/><a id='original' href="../t-rex-runner/">Play Original</a>
+            <br/><a id='chrome'>Works best in Chrome</a>
+            <br/><br/><br/><a id='original' href="../t-rex-runner/">Play Original</a>
             <br/><br/><br/><a id='more' href="http://yathish1618.github.io">What else?</a>
         </div>
          </div>
