--- a/india-religion-data/index.html
+++ b/india-religion-data/index.html
@@ -101,12 +101,14 @@
                         <br/><br/> As ever, thanfully, the gender ratio is not too skewed. 
                         <br/><br/> The rural demographic hasn't changed too much either. In 2001, it made up about 72% and now its still 68%.</p>
                     </div>
-                    <table id="population_overview">
+                        <div id="gender_india" style="display:inline-block;"></div>
+                        <div id="rural_india" style="display:inline-block;"></div>
+                    <!-- <table id="population_overview">
                       <tr>
                         <td id="gender_india"></td>
                         <td id="rural_india"></td>
                       </tr>
-                    </table>
+                    </table> -->
                 </div>
             </div>
         </div>
@@ -163,17 +165,11 @@
                 <small><em>Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</em></small>
             </div>
             <div class="space"></div>
-            <div class="row">
-                <table>
-                      <tr>
-                        <td id="male_religion"></td>
-                        <td id="female_religion"></td>
-                        <td id="religion_overview"></td>
-                        <td id="rural_religion"></td>
-                        <td id="urban_religion"></td>
-                      </tr>
-                </table>
-
+                        <div id="male_religion" style="display:inline-block;"></div>
+                        <div id="female_religion" style="display:inline-block;"></div>
+                        <div id="religion_overview" style="display:inline-block;"></div>
+                        <div id="rural_religion" style="display:inline-block;"></div>
+                        <div id="urban_religion" style="display:inline-block;"></div>
                 <!-- <div class="col-md-3 col-sm-6 service">
                     <i class="fa fa-bullhorn"></i>
                     <h4><strong>Marketing</strong></h4>
