First version final
colors; input data disabled external csv dependancy for most charts..

--- a/india-religion-data/index.html
+++ b/india-religion-data/index.html
@@ -74,8 +74,8 @@
     <div id="tf-home" class="text-center">
         <div class="overlay">
             <div class="content">
-                <h1>Welcome to <strong><span class="color">India census data visualization.</span></strong></h1>
-                <p class="lead">Here we primarily focus on <strong>population by religious communities</strong> based on the data released by Census of India.</p>
+                <h1>Welcome to <strong><span class="color">India census data visualization.</span></strong></h1><br/>
+                <p class="lead">Here we primarily focus on <strong>population by religious communities</strong> in India.<br/><br/>All data is based on 2011 Census released by Indian Government in 2015.<br/><br/>Data can be downloaded <a href="http://www.censusindia.gov.in/2011census/C-01.html">here<a></p>
                 <a href="#tf-about" class="fa fa-angle-down page-scroll"></a>
             </div>
         </div>
@@ -96,8 +96,8 @@
                             <hr>
                             <div class="clearfix"></div>
                         </div>
-                        <p class="intro">Of course we should begin with the population distribution across states. The map on left shows population density across states. U.P is still leading the race!
-                        <br/><br/>The total population growth of india, in fact, is mildly decreasing over decades. At its peak, it was almost 25% in '70s. Now in 2011, the population growth fell to about 18%.
+                        <p class="intro">Population of India is 1.25 billion today. Let's look at the population distribution across states. The map on left shows population density across states. U.P is still leading the race!
+                        <br/><br/>The total population growth rate of india, in fact, is mildly decreasing over decades. At its peak, it was almost 25% in '70s. Now in 2011, the population growth rate fell to about 18%.
                         <br/><br/> As ever, thanfully, the gender ratio is not too skewed. 
                         <br/><br/> The rural demographic hasn't changed too much either. In 2001, it made up about 72% and now its still 68%.</p>
                     </div>
@@ -124,6 +124,9 @@
                     <div class="line">
                         <hr>
                     </div>
+                        <div class="clearfix"></div>
+                            <large><em>Almost <strong>1 billion</strong> out of 1.25 billion people in India are Hindus. Followed by Hindus are Muslims comprising about <strong>200 million people</strong>.</em></large>
+                        </div>
                 </div>
 
                 <div id="team" >
@@ -162,7 +165,7 @@
                     <hr>
                 </div>
                 <div class="clearfix"></div>
-                <small><em>Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</em></small>
+                <large><em>India is known for its diversity. The charts below provoke you to think again!</em></large>
             </div>
             <div class="space"></div>
                         <div id="male_religion" style="display:inline-block;"></div>
@@ -190,6 +193,8 @@
                     <div class="line">
                         <hr>
                     </div>
+                    <div class="clearfix"></div>
+                    <large><em>The pulse chart below is eerie. If the bubbles are plotted linearly, to scale - there's no pulse visible at all (most of the dots disappear).</em></large>
                 </div>
                 <div id="religion_pulse"></div>
 
@@ -202,12 +207,12 @@
     <div id="tf-works">
         <div class="container"> <!-- Container -->
             <div class="section-title text-center center">
-                <h2>Take a look at <strong>our services</strong></h2>
+                <h2>Hungry for <strong>more?</strong></h2>
                 <div class="line">
                     <hr>
                 </div>
                 <div class="clearfix"></div>
-                <small><em>Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</em></small>
+                <large><em>If you're still looking for some specific data which you're unable to find above you should be able to find it below. Just use the filters to find exactly what you're looking for.</em></large>
             </div>
             <div class="space"></div>
 
@@ -358,7 +363,7 @@
         <div class="overlay">
             <div class="container">
                 <div class="section-title center">
-                    <h2><strong>Our clients’</strong> testimonials</h2>
+                    <h2><strong>Quotable</strong> Quotes</h2>
                     <div class="line">
                         <hr>
                     </div>
@@ -367,18 +372,18 @@
                     <div class="col-md-8 col-md-offset-2">
                         <div id="testimonial" class="owl-carousel owl-theme">
                             <div class="item">
-                                <h5>This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</h5>
-                                <p><strong>Dean Martin</strong>, CEO Acme Inc.</p>
+                                <h5>Population, when unchecked, increases in a geometrical ratio, Substence, increases only in an arithmetical ratio.</h5>
+                                <p><strong>Thomas Malthus</strong></p>
                             </div>
 
                             <div class="item">
-                                <h5>This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</h5>
-                                <p><strong>Dean Martin</strong>, CEO Acme Inc.</p>
+                                <h5>Strength lies in differences, not in similarities.</h5>
+                                <p><strong>Stephen R. Covey</strong></p>
                             </div>
 
                             <div class="item">
-                                <h5>This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</h5>
-                                <p><strong>Dean Martin</strong>, CEO Acme Inc.</p>
+                                <h5>As an atheist, I am angry that we live in a society in which the plain truth cannot be spoken without offending 90% of the population.</h5>
+                                <p><strong>Sam Harris</strong></p>
                             </div>
                         </div>
                     </div>
@@ -396,15 +401,14 @@
                 <div class="col-md-8 col-md-offset-2">
 
                     <div class="section-title center">
-                        <h2>Hungry for <strong>more?</strong></h2>
+                        <h2><strong>About</strong> this page</h2>
                         <div class="line">
                             <hr>
                         </div>
                         <div class="clearfix"></div>
-                        <small><em>Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</em></small>            
+                        <large><em>All the charts on this page were created using <a href="pykcharts.com">Pykcharts</a>. <br/>The motivation behind the page was to explore the charts JS library.<br/><br/>Source code of this page can be found on my <a href="https://github.com/yathish1618/yathish1618.github.io/tree/master/india-religion-data">github repository<a>. Please feel free to contribute in modifying and updating this page.</em></large>            
                     </div>
-
-                    <form>
+                    <!-- <form>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -425,7 +429,7 @@
                         </div>
                         
                         <button type="submit" class="btn tf-btn btn-default">Submit</button>
-                    </form>
+                    </form> -->
 
                 </div>
             </div>
@@ -436,14 +440,17 @@
     <nav id="footer">
         <div class="container">
             <div class="pull-left fnav">
-                <p>ALL RIGHTS RESERVED. COPYRIGHT © 2014. Designed by <a href="https://dribbble.com/shots/1817781--FREEBIE-Spirit8-Digital-agency-one-page-template">Robert Berki</a> and Coded by <a href="https://dribbble.com/jennpereira">Jenn Pereira</a></p>
+                <p>Page Designed and coded by <a href="https://dribbble.com/shots/1817781--FREEBIE-Spirit8-Digital-agency-one-page-template">Yathish</a></p>
             </div>
             <div class="pull-right fnav">
                 <ul class="footer-social">
-                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a>Find me elsewhere:</a></li>
+                    <li><a href="http://khaostokosmos.tumblr.com"><i class="fa fa-tumblr"></i></a></li>
+                    <li><a href="http://youtube.com/yathish1618"><i class="fa fa-youtube"></i></a></li>
+                    <li><a href="http://vimeo.com/yathish"><i class="fa fa-vimeo-square"></i></a></li>
+                    <li><a href="http://www.facebook.com/pages/Khaos-to-Kosmos/515892318449300"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="http://twitter.com/YathishDhavala"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="http://yathish1618.github.io"><i class="fa fa-github"></i></a></li>
                 </ul>
             </div>
         </div>
