sections names updated

--- a/india-religion-data/index.html
+++ b/india-religion-data/index.html
@@ -60,10 +60,10 @@
             <li><a href="#tf-home" class="page-scroll">Home</a></li>
             <li><a href="#tf-about" class="page-scroll">Overview</a></li>
             <li><a href="#tf-team" class="page-scroll">Religions</a></li>
-            <li><a href="#tf-services" class="page-scroll">Detailed</a></li>
+            <li><a href="#tf-services" class="page-scroll">States</a></li>
             <li><a href="#tf-works" class="page-scroll">More</a></li>
             <li><a href="#tf-testimonials" class="page-scroll">Quotes</a></li>
-            <li><a href="#tf-contact" class="page-scroll">Contact</a></li>
+            <li><a href="#tf-contact" class="page-scroll">About</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
