Minor hyperlink fix

--- a/india-religion-data/index.html
+++ b/india-religion-data/index.html
@@ -406,7 +406,7 @@
                             <hr>
                         </div>
                         <div class="clearfix"></div>
-                        <large><em>All the charts on this page were created using <a href="pykcharts.com">Pykcharts</a>. <br/>The motivation behind the page was to explore the charts JS library.<br/><br/>Source code of this page can be found on my <a href="https://github.com/yathish1618/yathish1618.github.io/tree/master/india-religion-data">github repository<a>. Please feel free to contribute in modifying and updating this page.</em></large>            
+                        <large><em>All the charts on this page were created using <a href="pykcharts.com">Pykcharts</a>. <br/>The motivation behind the page was to explore the charts JS library.<br/><br/>Source code of this page can be found on my <a href="https://github.com/yathish1618/yathish1618.github.io/tree/master/india-religion-data">github repository</a>. Please feel free to contribute in modifying and updating this page.</em></large>            
                     </div>
                     <!-- <form>
                         <div class="row">
